Build: integrate vimotest 2025.3.0-alpha1